# mpgui_c

./: .gitignore  CMakeLists.txt  main.c
include/: dir.h  song.h
include/utils/: path.h
src/: dir.c  main.c  song.c
src/utils/: path.c
